--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -11,11 +11,16 @@
 }
 
 body {
-  font-family: Montserrat, sans-serif;
+  font-family: "quicksand", serif;
   color: #1a1b1f;
   font-size: 16px;
   line-height: 28px;
   font-weight: 400;
+}
+
+h1{
+  font-size: 24px !important;
+  font-weight: 700;
 }
 
 #myBtn {
@@ -210,6 +215,10 @@ figcaption {
   text-align: center;
 }
 
+.p{
+  font-size: 16px;
+}
+
 .paragraph-small {
   font-size: 14px;
   line-height: 26px;
@@ -256,10 +265,12 @@ figcaption {
   margin-left: -117px;
   -webkit-transition: opacity 200ms cubic-bezier(0.322, 0.001, 0.25, 1);
   transition: opacity 200ms cubic-bezier(0.322, 0.001, 0.25, 1);
-  color: #434343;
-  font-size: 38px;
+  background: -webkit-linear-gradient(#0075eb, #00478f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 36px !important;
   line-height: 40px;
-  font-weight: 300;
+  font-weight: 700;
   text-transform: none;
 }
 
@@ -593,7 +604,7 @@ figcaption {
   -ms-flex-align: stretch;
   align-items: stretch;
   background-color: #f4f4f4;
-  background-image: url("https://d3e54v103j8qbb.cloudfront.net/img/background-image.svg");
+  background-image: url("../images/");
   background-position: 50% 50%;
   background-size: cover;
   text-align: center;
@@ -651,7 +662,7 @@ figcaption {
   grid-template-columns: 1.25fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
-  background-image: url("../images/portfolio-3---wide.svg");
+  background-image: url("../images/naiya-project.svg");
   background-size: cover;
 }
 
@@ -667,8 +678,14 @@ figcaption {
   grid-template-columns: 1fr 1.25fr 0.75fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
-  background-image: url("../images/clay_phone_14_pro_mockup_3.jpg");
+  background-image: url("../images/wakacarry.svg");
   background-size: cover;
+}
+
+#naiya-case_study{
+  /* font-size: 2rem; */
+  font-weight: 600;
+  color: #F90047;
 }
 
 .project-name-link {
@@ -2985,6 +3002,17 @@ figcaption {
   grid-column-start: 1;
   -ms-grid-column-span: 2;
   grid-column-end: 3;
+  -ms-grid-row: 2;
+  grid-row-start: 2;
+  -ms-grid-row-span: 1;
+  grid-row-end: 3;
+}
+
+#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8ff5-56179d35 {
+  -ms-grid-column: 3;
+  grid-column-start: 3;
+  -ms-grid-column-span: 1;
+  grid-column-end: 4;
   -ms-grid-row: 2;
   grid-row-start: 2;
   -ms-grid-row-span: 1;
