--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: "quicksand", serif;
+  font-family: montserrat, sans-serif;
   color: #1a1b1f;
   font-size: 16px;
   line-height: 28px;
@@ -268,9 +268,9 @@ figcaption {
   background: -webkit-linear-gradient(#0075eb, #00478f);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 36px !important;
+  font-size: 38px !important;
   line-height: 40px;
-  font-weight: 700;
+  font-weight: 300;
   text-transform: none;
 }
 
@@ -2498,8 +2498,8 @@ figcaption {
   .heading-jumbo {
     width: 300px;
     margin-left: -25px;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 32px;
     text-align: left;
   }
 
