--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -11,15 +11,15 @@
 }
 
 body {
-  font-family: montserrat, sans-serif;
+  font-family: "lexend", montserrat, sans-serif;
   color: #1a1b1f;
   font-size: 16px;
   line-height: 28px;
   font-weight: 400;
 }
 
-h1{
-  font-size: 24px !important;
+h1 {
+  font-size: 2rem !important;
   font-weight: 700;
 }
 
@@ -211,11 +211,25 @@ figcaption {
   margin-left: auto;
 }
 
+/* RESEARCH SECTION FOR TILO TAILOR */
+
+.w-container.tilo-container > img {
+  height: 100px;
+  width: 100px;
+  margin-bottom: 60px;
+}
+
+#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-72179d3a.contribution-icon > img {
+  height: 100px;
+  width: 100px;
+  margin-bottom: 60px;
+}
+
 .styleguide-content-wrap {
   text-align: center;
 }
 
-.p{
+.p {
   font-size: 16px;
 }
 
@@ -523,9 +537,9 @@ figcaption {
 }
 
 .position-name-text {
-  margin-bottom: 10px;
-  font-size: 20px;
-  line-height: 34px;
+  margin-bottom: 12px;
+  font-size: 24px;
+  line-height: 40px;
   font-weight: 600;
   text-transform: none;
 }
@@ -633,7 +647,27 @@ figcaption {
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
-  background-image: url("../images/hero-min.png");
+  background-image: url("../images/Homepagetilotailor.png");
+  background-position: 0px 0px;
+  background-size: cover;
+  background-clip: border-box;
+  -webkit-text-fill-color: inherit;
+}
+
+.work-image.cc-work-5 {
+  position: static;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+  background-image: url("../images/hero-min-p-1080.png");
   background-position: 0px 0px;
   background-size: cover;
   background-clip: border-box;
@@ -641,6 +675,10 @@ figcaption {
 }
 
 .work-image.cc-work-2 {
+  background-image: url("../images/medteqprodashboard.jpg");
+  background-size: cover;
+}
+.work-image.cc-work-6 {
   background-image: url("../images/portfolioproject.jpg");
   background-size: cover;
 }
@@ -683,10 +721,10 @@ figcaption {
   background-size: cover;
 }
 
-#naiya-case_study{
+#naiya-case_study {
   /* font-size: 2rem; */
   font-weight: 600;
-  color: #F90047;
+  color: #f90047;
 }
 
 .project-name-link {
@@ -1248,6 +1286,43 @@ figcaption {
   font-weight: 600;
 }
 
+.hero5 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100vh;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: transparent;
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.57)),
+      to(rgba(0, 0, 0, 0.57))
+    ),
+    url("../images/3rdretailWireframe.jpg");
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.57),
+      rgba(0, 0, 0, 0.57)
+    ),
+    url("../images/3rdretailWireframe.jpg");
+  background-position: 0px 0px, 0px 0px;
+  background-size: auto, cover;
+  background-repeat: repeat, repeat;
+  background-clip: border-box;
+  -webkit-text-fill-color: inherit;
+  background-attachment: fixed;
+}
+
 .hero {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1270,18 +1345,19 @@ figcaption {
       from(rgba(0, 0, 0, 0.57)),
       to(rgba(0, 0, 0, 0.57))
     ),
-    url("../images/hero-min.png");
+    url("../images/Homepage_title.png");
   background-image: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.57),
       rgba(0, 0, 0, 0.57)
     ),
-    url("../images/hero-min.png");
+    url("../images/Homepage_title.png");
   background-position: 0px 0px, 0px 0px;
   background-size: auto, cover;
   background-repeat: repeat, repeat;
   background-clip: border-box;
   -webkit-text-fill-color: inherit;
+  background-attachment: fixed;
 }
 
 .div-block-3 {
@@ -1316,13 +1392,13 @@ figcaption {
   -ms-grid-row-align: auto;
   align-self: auto;
   color: #fff;
-  font-size: 30px;
+  font-size: 24px;
   line-height: 32px;
   font-weight: 500;
 }
 
 .heading-3 {
-  margin-bottom: -3px;
+  margin-bottom: 4px;
   color: #fff;
   font-size: 24px;
   font-weight: 700;
@@ -1343,7 +1419,7 @@ figcaption {
 }
 
 .div-block-4 {
-  max-width: none;
+  max-width: 100%;
   min-width: 0%;
   padding-top: 60px;
   padding-bottom: 60px;
