--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -2382,6 +2382,17 @@ figcaption {
     line-height: 52px;
   }
 
+  .icon-bulb {
+    margin: auto;
+    height: 60px;
+    width: 60px;
+    margin-bottom: 50px;
+  }
+
+  .contact-btn {
+    margin-top: 20px;
+  }
+
   .rich-text {
     width: 90%;
     max-width: 470px;
