compressed img files

--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -647,7 +647,7 @@ figcaption {
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
-  background-image: url("../images/Homepagetilotailor.png");
+  background-image: url("../images/Homepage_title.png");
   background-position: 0px 0px;
   background-size: cover;
   background-clip: border-box;
