--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -274,18 +274,21 @@ figcaption {
   display: -ms-flexbox;
   display: flex;
   width: 800px;
-  margin-top: 6px;
-  margin-bottom: 10px;
+  /* margin-top: 12px; */
+  margin-bottom: 8px;
   margin-left: -117px;
-  -webkit-transition: opacity 200ms cubic-bezier(0.322, 0.001, 0.25, 1);
+  /* -webkit-transition: opacity 200ms cubic-bezier(0.322, 0.001, 0.25, 1);
   transition: opacity 200ms cubic-bezier(0.322, 0.001, 0.25, 1);
   background: -webkit-linear-gradient(#0075eb, #00478f);
+ 
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 38px !important;
+  -webkit-text-fill-color: transparent; */
+  font-size: 32px !important;
   line-height: 40px;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: none;
+  padding-top: 16px;
+  color: #474747;
 }
 
 .paragraph-tiny {
@@ -529,11 +532,11 @@ figcaption {
 }
 
 .name-text {
-  width: 500px;
+  width: 600px;
   color: #f70;
-  font-size: 28px;
+  font-size: 48px;
   line-height: 34px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .position-name-text {
@@ -2406,8 +2409,9 @@ figcaption {
   .heading-jumbo {
     width: 520px;
     margin-left: -44px;
-    font-size: 28px;
+    font-size: 24px;
     line-height: 30px;
+    padding-top: 20px;
   }
 
   .section {
@@ -2750,7 +2754,8 @@ figcaption {
   }
 
   .text-span {
-    font-size: 18px;
+    font-size: 48px;
+    font-weight: 700px;
   }
 
   .text-span-2 {
