--- a/css/ekwealortobechukwu.webflow.css
+++ b/css/ekwealortobechukwu.webflow.css
@@ -2604,11 +2604,11 @@ figcaption {
   }
 
   .heading-jumbo {
-    width: 300px;
-    margin-left: -25px;
+    width: 100%;
+    margin: auto;
     font-size: 14px;
     line-height: 32px;
-    text-align: left;
+    text-align: center;
   }
 
   .section {
@@ -2635,10 +2635,11 @@ figcaption {
   }
 
   .name-text {
-    width: 300px;
-    font-size: 18px;
-    line-height: 20px;
-    text-align: center;
+    width: 100%;
+    margin: auto;
+    font-size: 32px;
+    line-height: 40px;
+    text-align: center !important;
   }
 
   .work-image.cc-work-1 {
@@ -2753,13 +2754,13 @@ figcaption {
     line-height: 46px;
   }
 
-  .text-span {
+  /* .text-span {
     font-size: 48px;
     font-weight: 700px;
-  }
+  } */
 
   .text-span-2 {
-    margin-left: -105px;
+    margin: auto;
   }
 
   .paragraph {
